--- a/.github/workflows/diff.yml
+++ b/.github/workflows/diff.yml
@@ -9,6 +9,9 @@ on:
 jobs:
   diff-reports:
     runs-on: macos-latest
+    permissions:
+      contents: read
+      pull-requests: read
     steps:
       - uses: khan/pull-request-comment-trigger@v1.1.0
         id: check
@@ -30,6 +33,8 @@ jobs:
         id: comment-branch
       - uses: actions/checkout@v3
         if: steps.check.outputs.triggered == 'true'
+        with:
+          ref: ${{ steps.comment-branch.outputs.head_ref }}
       # Checks-out master branch under "master" directory
       - uses: actions/checkout@v3
         if: steps.check.outputs.triggered == 'true'
